--- a/src/index.css
+++ b/src/index.css
@@ -91,7 +91,7 @@ button:active {
     text-align: center;
   }
   input:focus {
-    box-shadow: rgb(0 0 0 / 0%) 0px 0px 0px 0px,
+    box-shadow: rgba(3, 80, 169, 0) 0px 0px 0px 0px,
       rgb(58 151 212 / 36%) 0px 0px 0px 4px, rgb(0 0 0 / 0%) 0px 0px 0px 0px,
       rgb(60 66 87 / 16%) 0px 0px 0px 1px, rgb(0 0 0 / 0%) 0px 0px 0px 0px,
       rgb(0 0 0 / 0%) 0px 0px 0px 0px, rgb(0 0 0 / 0%) 0px 0px 0px 0px;
