--- a/src/App.css
+++ b/src/App.css
@@ -31,10 +31,10 @@
   margin: 5px 0;
 }
 
-.form-share-container {
+/* .form-share-container {
   padding: 1em;
   width: 100%;
-}
+} */
 .associated-title {
   text-shadow: 0 2px 0 rgba(75, 75, 75, 0.2);
 }
